<resources>
    <string name="app_name">Fashionista</string>
    <string name="cart">Cart</string>
    <string name="search_try_on"><![CDATA[Search & try-on]]></string>
    <string name="fashionista">Fashionista</string>
    <string name="generate_models">Generate models</string>
    <string name="online_try_on">Online try-on</string>
    <string name="back">Back</string>
    <string name="create_by_size">Create by size</string>
    <string name="create_by_photos">Create by photos</string>
    <string name="view_my_models">View my models</string>
    <string name="pic1">Pic1</string>
    <string name="leg_length">Leg length:</string>
    <string name="arm_length">Arm length:</string>
    <string name="waistline">Waistline:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="cm">cm</string>
    <string name="please_enter_your_sizes">Please enter your sizes:</string>
    <string name="kg" />
    <string name="kg0">kg</string>
    <string name="generate">Generate</string>
    <string name="please_upload_your_photos">Please upload your photos:</string>
    <string name="create_by_photos_title">Create by photos</string>
    <string name="successfully_generated">Successfully Generated!</string>
    <string name="back_to_generate">Back to generate</string>
    <string name="back_to_home_page">Back to home page</string>
    <string name="my_models">My models</string>
    <string name="refuse_amp_back"><![CDATA[Refuse & back]]></string>
    <string name="permit_continue"><![CDATA[Permit & continue]]></string>
    <string name="upload_right">Upload right</string>
    <string name="upload_back">Upload back</string>
    <string name="upload_front">Upload front</string>
    <string name="upload_left">Upload left</string>
    <string name="todo">TODO</string>
    <string name="product_1">Product 1</string>
    <string name="price">Price ￥</string>
    <string name="_45">45</string>
    <string name="no_cloth_to_check_out">No cloth To Check Out</string>
    <string name="lt_will_provide_the_link_to_the_clothes_you_choose">lt will provide the link to the clothes you choose:</string>
    <string name="link">Link</string>
    <string name="https_m_tb_cn_h_uaxvmnc">https://m.tb.cn/h.UAxvmNc</string>
    <string name="item_name">Item Name</string>
    <string name="receipt_price">Price:</string>
    <string name="quantity">Quantity</string>
    <string name="store_url">www.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delete">Delete</string>
    <string name="add_to_cart">Add to cart</string>
    <string-array name="sorting_options">
        <item>Sort by Name</item>
        <item>Sort by Category</item>
        <item>Sort by Cheapest</item>
        <item>Sort by Expensive</item>
        <item>Sort by Shop</item>
        <item>Sort by Rating</item>
    </string-array>
</resources>