<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Generatemodel">

    <Button
        android:id="@+id/button_ge_back"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_ge3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="#2196F3"
        android:text="@string/view_my_models"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ge2" />

    <Button
        android:id="@+id/button_ge2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2196F3"
        android:text="@string/create_by_photos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/button_ge3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ge1" />

    <Button
        android:id="@+id/button_ge1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#2196F3"
        android:text="@string/create_by_size"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ge1" />


    <TextView
        android:id="@+id/text_ge1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="347dp"
        android:background="#2196F3"
        android:backgroundTint="#2196F3"
        android:gravity="center|center_horizontal|end"
        android:text="@string/generate_models"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ge1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="178dp"
        android:layout_marginStart="114dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="115dp"
        android:contentDescription="@string/pic1"
        app:layout_constraintBottom_toTopOf="@+id/button_ge1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_ge1"
        app:srcCompat="@drawable/model_2" />

</androidx.constraintlayout.widget.ConstraintLayout>