<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:importantForAccessibility="no"
        android:src="@android:drawable/ic_notification_clear_all" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/product_image"
        android:text="@string/item_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_toEndOf="@id/item_name"
        android:text="@string/quantity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/product_image"
        android:text="@string/item_price"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/item_storeURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_price"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/product_image"
        android:text="@string/store_url"
        android:textSize="16sp" />

</RelativeLayout>
