<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_home2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:backgroundTint="#2196F3"
        android:text="@string/search_try_on"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/button_home3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_home1" />

    <Button
        android:id="@+id/button_home3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#2196F3"
        android:text="@string/cart"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_home2" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|center_horizontal"
        android:text="@string/fashionista"
        android:textColor="#2196F3"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="550dp"
        android:gravity="center|center_horizontal"
        android:text="@string/online_try_on"
        android:textColor="#6C6C6C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/button_home1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="162dp"
        android:layout_marginEnd="131dp"
        android:backgroundTint="#2196F3"
        android:text="@string/generate_models"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:iconTint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/button_home2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>