<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modelsuccess">

    <Button
        android:id="@+id/button_modelsuccess3"
        style="@style/Widget.Material3.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2196F3"
        android:text="@string/back_to_home_page"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_modelsuccess2" />

    <Button
        android:id="@+id/button_modelsuccess2"
        style="@style/Widget.Material3.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2196F3"
        android:text="@string/back_to_generate"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_modelsuccess1" />

    <Button
        android:id="@+id/button_modelsuccess1"
        style="@style/Widget.Material3.Button"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="96dp"
        android:backgroundTint="#2196F3"
        android:text="@string/view_my_models"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_modelsuccess"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="80dp"
        android:singleLine="false"
        android:text="@string/successfully_generated"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>