<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/list_item_cart_layout"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:descendantFocusability="blocksDescendants"
    card_view:cardBackgroundColor="@android:color/transparent"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true"
    tools:context=".itemlist_Cart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF3700B3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cart_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:background="#C3C3C3"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="0.35"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/cart_name"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="108dp"
                android:layout_height="47dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cart_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/_45"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/cart_remove"
                android:layout_width="36dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_delete_cart"
                android:clickable="true"
                android:focusable="false" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#2196F3"
        android:text="Link"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>